crates/core/tests/snapshots/schematic_macro_test__standalone__supports_renames.snap
---
source: crates/core/tests/schematic_macro_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Renamed".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .structure(
                StructType::new([("a".into(), SchemaField::new(schema.infer::<bool>()))]),
            )
    }
}
