crates/core/tests/snapshots/schematic_macro_test__standalone__unit_enum.snap
---
source: crates/core/tests/schematic_macro_test.rs
expression: pretty(output.to_token_stream())
---
#[automatically_derived]
impl schematic::Schematic for Example {
    fn schema_name() -> Option<String> {
        Some("Example".into())
    }
    fn build_schema(mut schema: schematic::SchemaBuilder) -> schematic::Schema {
        use schematic::schema::*;
        schema
            .enumerable(
                EnumType::from_schemas(
                    [
                        Schema {
                            name: Some("A".into()),
                            ty: Schema::literal_value(LiteralValue::String("A".into()))
                                .ty,
                            ..Default::default()
                        },
                        Schema {
                            name: Some("B".into()),
                            ty: Schema::literal_value(LiteralValue::String("B".into()))
                                .ty,
                            ..Default::default()
                        },
                    ],
                    None,
                ),
            )
    }
}
